--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body{
-  background: linear-gradient(30deg, green, aqua);
+  background: linear-gradient(30deg, green, yellow);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -63,7 +63,6 @@ a{
   color: white;
 }
 button{
-  background: linear-gradient(45deg, green, aqua);
   font-family: 'Silkscreen', monospace;
   font-size: 1.1rem;
   border-radius: 12px;
