--- a/css/app.css
+++ b/css/app.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body{
-  background: linear-gradient(30deg, green, yellow);
+  background: linear-gradient(30deg, purple, yellow);
   background-size: cover;
   background-repeat: no-repeat;
 }
